Move js into different folders and refactor a lot of chartist js.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,16 +2,11 @@
 title: The Linear Isomorphic Keybaord
 ---
 
-<!-- We should include this locally -->
-<script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-<script src="/javascripts/vendor/chartist-plugin-axistitle.min.js"></script>
-<script src="/javascripts/vendor/chartist-plugin-accessibility.min.js"></script>
-<script src="/javascripts/vendor/chartist-plugin-legend.js"></script>
-
+<%= partial "partials/chartist-js" %>
 
 <div class="hero">
   <div class="hero__image">
-    <%= image_tag "LIK-solo.png" %>
+    <%= image_tag "LIK-hero.png" %>
   </div>
   <h1 class="hero__text">The Linear Isomorphic Keyboard</h1>
 </div>
@@ -124,52 +119,6 @@ title: The Linear Isomorphic Keybaord
   <div class="footer__credits">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </footer>
 
-<script>
-  var data = <%= progress_data.to_json %>
-  options = {
-    axisY: {
-      onlyInteger: true
-    },
-    plugins: [
-      Chartist.plugins.ctAxisTitle({
-        axisX: {
-          axisTitle: "Practice Sessions",
-          offset: {
-            x: 0,
-            y: 30
-          },
-        },
-        axisY: {
-          axisTitle: "Completed Increments",
-        }
-      }),
-      Chartist.plugins.ctAccessibility({
-        caption: "Increments completed by each keyboard",
-        seriesHeader: 'Keyboard',
-        summary: 'A graphic that shows the rate of improvement for the LIK and the TK',
-        valueTransform: function(value) {
-          return value + ' completed increments';
-        },
-        // Use this if you want to make accessibility table visible
-        // visuallyHiddenStyles: 'position: absolute; top: 100%; width: 100%; font-size: 11px; overflow-x: auto; background-color: rgba(0, 0, 0, 0.1); padding: 10px'
-      }),
-      Chartist.plugins.legend({
-        legendNames: ["TK", "LIK"],
-      }),
-    ]
-  }
-  new Chartist.Line('.ct-chart', data, options);
-</script>
-
-<script>
-  var heroHeight = $(".hero")[0].offsetHeight;
-  function setNavOpacity() {
-    if (window.pageYOffset > heroHeight) {
-      $(".navbar")[0].classList.add("navbar--translucent");
-    } else {
-      $(".navbar")[0].classList.remove("navbar--translucent");
-    }
-  }
-  setNavOpacity();
-  window.addEventListener('scroll', setNavOpacity);
-</script>
+<script src="/javascripts/pages/application-index.js"></script>
+<script>var data = <%= progress_data.to_json %></script>
+<script src="/javascripts/blocks/basic-chart.js"></script>
