--- a/source/progress/index.html.erb
+++ b/source/progress/index.html.erb
@@ -1,10 +1,4 @@
-
-<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css" />
-<script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-<script src="/javascripts/vendor/chartist-plugin-axistitle.min.js"></script>
-<script src="/javascripts/vendor/chartist-plugin-axistitle.min.js"></script>
-<script src="/javascripts/vendor/chartist-plugin-accessibility.min.js"></script>
-<script src="/javascripts/vendor/chartist-plugin-legend.js"></script>
+<%= partial "partials/chartist-js" %>
 
 <div class="container section--top">
   <div><h1>Progress</h1></div>
@@ -17,40 +11,5 @@
   </div>
 </div>
 
-<script>
-  var data = <%= progress_data.to_json %>
-
-  options = {
-    axisY: {
-      onlyInteger: true
-    },
-    plugins: [
-      Chartist.plugins.ctAxisTitle({
-        axisX: {
-          axisTitle: "Practice Sessions",
-          offset: {
-            x: 0,
-            y: 30
-          },
-        },
-        axisY: {
-          axisTitle: "Completed Increments",
-        }
-      }),
-      Chartist.plugins.ctAccessibility({
-        caption: "Increments completed by each keyboard",
-        seriesHeader: 'Keyboard',
-        summary: 'A graphic that shows the rate of improvement for the LIK and the TK',
-        valueTransform: function(value) {
-          return value + ' completed increments';
-        },
-        // Use this if you want to make accessibility table visible
-        // visuallyHiddenStyles: 'position: absolute; top: 100%; width: 100%; font-size: 11px; overflow-x: auto; background-color: rgba(0, 0, 0, 0.1); padding: 10px'
-      }),
-      Chartist.plugins.legend({
-        legendNames: ["TK", "LIK"],
-      })
-    ]
-  }
-  new Chartist.Line('.ct-chart', data, options);
-</script>
+<script>var data = <%= progress_data.to_json %></script>
+<script src="/javascripts/blocks/basic-chart.js"></script>
