Refactor progress.rb and progress index. All charts are showing, and exercise_sets without increments are not.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -120,5 +120,5 @@ title: The Linear Isomorphic Keybaord
 </footer>
 
 <script src="/javascripts/blocks/chartist-options.js"></script>
-<script>var data = <%= progress_data.to_json %></script>
+<script>var data = <%= all_progress.to_json %></script>
 <script src="/javascripts/pages/application-index.js"></script>
