Redesign hero (not complete or fancy) and navbar

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,10 +5,10 @@ title: The Linear Isomorphic Keybaord
 <%= partial "partials/chartist-js" %>
 
 <div class="hero">
+  <h1 class="hero__text">This is the <br /> <span class="hero__text--black">Linear Isomorphic Keyboard</span></h1>
   <div class="hero__image">
-    <%= image_tag "LIK-hero.png" %>
+    <img src="/images/mini-lik.svg" class="" />
   </div>
-  <h1 class="hero__text">The Linear Isomorphic Keyboard</h1>
 </div>
 
 <div class="container section">
