--- a/source/stylesheets/blocks/navbar.css.scss
+++ b/source/stylesheets/blocks/navbar.css.scss
@@ -46,6 +46,11 @@
   margin-bottom: 0;
   list-style: none;
   z-index: 6;
+  font-family: "Mikro";
+}
+
+.navbar a {
+  text-decoration: none;
 }
 
 .navbar__link {
