--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -16,6 +16,6 @@
 @import "blocks/truncate.css.scss";
 
 // Custom
-@import "article.css.scss";
-@import "index.css.scss";
-@import "the-hypotheses.css.scss";
+@import "custom/article.css.scss";
+@import "custom/index.css.scss";
+@import "custom/the-hypotheses.css.scss";
