--- a/source/stylesheets/custom/index.css.scss
+++ b/source/stylesheets/custom/index.css.scss
@@ -1,38 +1,33 @@
 .hero {
-  // width: 100%;
   background-color: #848484;
-  // position: relative;
-  // z-index: 5;
+  padding-top: 8rem;
+  height: 800px;
 }
+
+.hero__text {
+  color: #fff;
+  font-weight: 600;
+  text-align: center;
+  font-size: 72px;
+  font-weight: 400;
+  margin: 2rem 0;
+  line-height: 1.3;
+}
+
+.hero__text--black {
+  font-weight: 900;
+}
+
 .hero__image {
   margin: 0 auto;
   overflow: hidden;
   position: relative;
-  padding: 8rem 1rem 0;
-  @media screen and (min-width: 641px) {
-    padding: 8rem 8rem 0;
-  }
+  padding: 0 1rem 0;
+  // @media screen and (min-width: 641px) {
+  //   padding: 8rem 8rem 0;
+  // }
 }
-// .hero__image--inner {
-//   display: inline-block;
-//   position: relative;
-//   right: -50%;
-// }
-// .hero__image {
-//   position: relative;
-//   left: -50%;
-// }
 
-.hero__text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 8rem;
-  margin-top: 2rem;
-  color: #fff;
-  font-weight: 600;
-  text-align: center;
-}
 
 .main-description {
   font-size: 2rem;
