Redesign summary and progress on main page.

--- a/source/stylesheets/general.css.scss
+++ b/source/stylesheets/general.css.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Ivar Soft', serif;
   font-weight: normal;
   line-height: 1.5;
   margin: 0;
