--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,110 +5,129 @@ title: The Linear Isomorphic Keybaord
 <%= partial "partials/chartist-js" %>
 
 <div class="hero">
-  <h1 class="hero__text">This is the <br /> <span class="hero__text--black">Linear Isomorphic Keyboard</span></h1>
+  <h1 class="hero__text">
+    This is the<br><span class="hero__text--black">Linear Isomorphic Keyboard</span>
+  </h1>
   <div class="hero__image">
     <img src="/images/mini-lik.svg" class="" />
   </div>
 </div>
 
 <div class="container section">
-  <div class="row justify-content-center">
-    <div class="col-8 main-description">Is there a better way to design the keyboard?
-      <br/>
-      <br/>
-      This is an experiment to determine if the <strong>Linear Isomorphic Keyboard</strong> is the answer.
+  <div class="row">
+    <h2 class="col-6 section__header">This is an experiment</h2>
+  </div>
+  <div class="row">
+    <div class="col-12 summary__text">
+      I am exploring how the Linear Isomorphic Keyboard (<span class="summary__text--keyboard">LIK</span>) compares to the Traditional Keyboard (<span class="summary__text--keyboard">TK</span>).
+    </div>
+    <div class="col-12 summary__text">I am practicing both keyboards for the same amount of time, playing the <a href="" class="summary__text--link">same exercises</a>, and <a href="" class="summary__text--link">recording everything</a>.</div>
+  </div>
+</div>
+
+<div class="container section">
+  <div class="row">
+    <h2 class="col-12 section__header">The results so far</h2>
+  </div>
+
+  <div class="row">
+    <div class="col-12 ct-chart chart--medium progress-chart"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-12 progress-footer">
+      <div class="">Last practice session: <a href="/practice-sessions/<%= data.practice_sessions.last.id %>"><%= data.practice_sessions.last.date %></a></div>
+      <div>
+        <a href="/progress" class="">more progress here</a>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="container section">
+  <div class="row">
+    <div class="col col-md-8">
+      <div>
+        <h2>Two keyboards</h2>
+      </div>
+      <div>
+        <img src="/images/mini-lik.svg" class="summary__keyboard" />
+        <img src="/images/mini-tk.svg" class="summary__keyboard" />
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-end summary-section">
+    <div class="col col-md-8">
+      <div>
+        <h2>Recorded practicing the same content  for the same amount of time</h2>
+      </div>
+      <div class="summary-icons" style="margin-top: 0">
+        <img src="/images/microphone.svg" class="summary__icon" />
+        <img src="/images/sheet-music.svg" class="summary__icon" />
+        <img src="/images/stopwatch.svg" class="summary__icon"/>
+      </div>
+    </div>
+  </div>
+  <div class="row summary-section">
+    <div class="col col-md-8">
+      <div>
+        <h2>Results are graphed, analyzed, and reflected upon.</h2>
+      </div>
+      <div class="summary-icons"> 
+        <img src="/images/bar-chart.svg" class="summary__icon"/>
+        <img src="/images/contract.svg" class="summary__icon"/>
+      </div>
     </div>
   </div>
 </div>
-  
-  <section class="container">
-    <hr class="hr-top"/><hr class="hr-bottom"/>
-  </section>
 
-  <div class="container section">
-    <div class="row">
-      <div class="col col-md-8">
-        <div>
-          <h2>Two keyboards</h2>
-        </div>
-        <div>
-          <img src="/images/mini-lik.svg" class="summary__keyboard" />
-          <img src="/images/mini-tk.svg" class="summary__keyboard" />
-        </div>
-      </div>
+<section class="container">
+  <hr class="hr-top"/><hr class="hr-bottom"/>
+</section>
+
+<div class="container section">
+  <div>
+    <h1>Articles</h1>
+  </div>
+  <div class="row justify-content-end">
+    <div class="col">
+      <ul>
+        <li class="article">
+          <div><h3><a href="/articles/the-idea">The Idea</a></h3></div>
+          <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major. It is wonderfully simple: just play the white notes. But...</div>
+        </li>
+        <li class="article">
+          <div><h3><a href="/articles/the-hypotheses">The Hypotheses</a></h3></div>
+          <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the traditional keyboard (TK). I predict that I will improve faster on the LIK than on the traditional keyboard and that the LIK will not have significant technical limitations...</div>
+        </li>
+        <li class="article">
+          <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
+          <div class="article-content">I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the traditional keyboard (TK)... </div>
+        </li>
+      </ul>
     </div>
-    <div class="row justify-content-end summary-section">
-      <div class="col col-md-8">
-        <div>
-          <h2>Recorded practicing the same content  for the same amount of time</h2>
-        </div>
-        <div class="summary-icons" style="margin-top: 0">
-          <img src="/images/microphone.svg" class="summary__icon" />
-          <img src="/images/sheet-music.svg" class="summary__icon" />
-          <img src="/images/stopwatch.svg" class="summary__icon"/>
-        </div>
-      </div>
-    </div>
-    <div class="row summary-section">
-      <div class="col col-md-8">
-        <div>
-          <h2>Results are graphed, analyzed, and reflected upon.</h2>
-        </div>
-        <div class="summary-icons"> 
-          <img src="/images/bar-chart.svg" class="summary__icon"/>
-          <img src="/images/contract.svg" class="summary__icon"/>
-        </div>
-      </div>
+  </div>
+  <div class="section__footer">
+    <a href="/articles">More Articles...</a>
+  </div>
+</div>
+
+<section class="container">
+  <hr class="hr-top"/><hr class="hr-bottom"/>
+</section>
+
+<div class="container section">
+  <div><h1>Progress</h1></div>
+
+  <div class="row justify-content-center progress">
+    <div class="col col-sm-8">
+      <div class="ct-chart chart--medium"></div>
     </div>
   </div>
 
-  <section class="container">
-    <hr class="hr-top"/><hr class="hr-bottom"/>
-  </section>
-
-  <div class="container section">
-    <div>
-      <h1>Articles</h1>
-    </div>
-    <div class="row justify-content-end">
-      <div class="col">
-        <ul>
-          <li class="article">
-            <div><h3><a href="/articles/the-idea">The Idea</a></h3></div>
-            <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major. It is wonderfully simple: just play the white notes. But...</div>
-          </li>
-          <li class="article">
-            <div><h3><a href="/articles/the-hypotheses">The Hypotheses</a></h3></div>
-            <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the traditional keyboard (TK). I predict that I will improve faster on the LIK than on the traditional keyboard and that the LIK will not have significant technical limitations...</div>
-          </li>
-          <li class="article">
-            <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
-            <div class="article-content">I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the traditional keyboard (TK)... </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="section__footer">
-      <a href="/articles">More Articles...</a>
-    </div>
-  </div>
-
-  <section class="container">
-    <hr class="hr-top"/><hr class="hr-bottom"/>
-  </section>
-
-  <div class="container section">
-    <div><h1>Progress</h1></div>
-
-    <div class="row justify-content-center progress">
-      <div class="col col-sm-8">
-        <div class="ct-chart chart--medium"></div>
-      </div>
-    </div>
-
-    <div class="section__footer">
-      <a href="/progress">More Progress Coming Soon</a>
-    </div>
+  <div class="section__footer">
+    <a href="/progress">More Progress Coming Soon</a>
   </div>
 </div>
 
