--- a/source/stylesheets/custom/index.css.scss
+++ b/source/stylesheets/custom/index.css.scss
@@ -8,7 +8,8 @@
   color: #fff;
   font-weight: 600;
   text-align: center;
-  font-size: 72px;
+  // font-size: 72px;
+  font-size: 50px;
   font-weight: 400;
   margin: 2rem 0;
   line-height: 1.3;
@@ -29,26 +30,57 @@
 }
 
 
-.main-description {
-  font-size: 2rem;
-  text-align: center;
-}
-
 .section {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
-
-.section--top {
   margin-top: 8rem;
 }
 
-.hr-top {
-  margin-top: 0;
+.section__header {
+  font-family: Mikro;
+  // font-size: 100px;
+  font-size: 90px;
+  font-weight: 900;
+  line-height: 1;
+  margin: 2rem 0;
+  padding: 0;
 }
 
-.hr-bottom {
-  margin-bottom: 0;
+// .summary__header {
+//   font-family: Mikro;
+//   // font-size: 100px;
+//   font-size: 90px;
+//   font-weight: 900;
+//   line-height: 1;
+//   margin: 2rem 0;
+//   padding: 0;
+// }
+
+.summary__text {
+  font-family: Mikro;
+  font-size: 64px;
+  // font-size: 45px;
+  font-weight: 100;
+  line-height: 1.3;
+  margin: 1.5rem 0;
+  padding: 0;
+}
+
+.summary__text--keyboard {
+  font-weight: 500;
+}
+
+// .summary__text--link {
+//   font-weight: 500;
+// }
+
+.progress-chart {
+  font-family: Ivar Soft;
+  margin-top: 1rem;
+}
+
+.progress-footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 3rem 0;
 }
 
 .summary-section {
