Finish a mockup of the articles section, still need to add content.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,6 +4,7 @@ title: The Linear Isomorphic Keybaord
 
 <%= partial "partials/chartist-js" %>
 
+<!-- Hero -->
 <div class="hero">
   <h1 class="hero__text">
     This is the<br><span class="hero__text--black">Linear Isomorphic Keyboard</span>
@@ -13,6 +14,7 @@ title: The Linear Isomorphic Keybaord
   </div>
 </div>
 
+<!-- Summary -->
 <div class="container section">
   <div class="row">
     <h2 class="col-6 section__header">This is an experiment</h2>
@@ -25,6 +27,7 @@ title: The Linear Isomorphic Keybaord
   </div>
 </div>
 
+<!-- Progress -->
 <div class="container section">
   <div class="row">
     <h2 class="col-12 section__header">The results so far</h2>
@@ -42,8 +45,63 @@ title: The Linear Isomorphic Keybaord
       </div>
     </div>
   </div>
-
 </div>
+
+<div class="container section">
+  <div class="row">
+    <h2 class="col-12 section__header">Still curious?</h2>
+  </div>
+
+  <div class="row" style="margin-top: 2rem;">
+    <div class="col-6">
+      <h3 class="articles-title">Reflections</h3>
+      <div class="articles">
+        <div class="article">
+          <h4 class="article__title">The Idea</h4>
+          <div class="row justify-content-center">
+            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.</div>
+          </div>
+        </div>
+        <div class="article">
+          <h4 class="article__title">The Idea</h4>
+          <div class="row justify-content-center">
+            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
+          </div>
+        </div>
+        <div class="article">
+          <h4 class="article__title">The Idea</h4>
+          <div class="row justify-content-center">
+            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-6">
+      <h3 class="articles-title">Articles</h3>
+      <div class="articles"> 
+        <div class="article">
+          <h4 class="article__title">The Idea</h4>
+          <div class="row justify-content-center">
+            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
+          </div>
+        </div>
+        <div class="article">
+          <h4 class="article__title">The Idea</h4>
+          <div class="row justify-content-center">
+            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
+          </div>
+        </div>
+        <div class="article">
+          <h4 class="article__title">The Idea</h4>
+          <div class="row justify-content-center">
+            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="container section">
   <div class="row">
