--- a/source/stylesheets/custom/index.css.scss
+++ b/source/stylesheets/custom/index.css.scss
@@ -3,7 +3,6 @@
   padding-top: 8rem;
   height: 800px;
 }
-
 .hero__text {
   color: #fff;
   font-weight: 600;
@@ -14,11 +13,9 @@
   margin: 2rem 0;
   line-height: 1.3;
 }
-
 .hero__text--black {
   font-weight: 900;
 }
-
 .hero__image {
   margin: 0 auto;
   overflow: hidden;
@@ -43,17 +40,6 @@
   margin: 2rem 0;
   padding: 0;
 }
-
-// .summary__header {
-//   font-family: Mikro;
-//   // font-size: 100px;
-//   font-size: 90px;
-//   font-weight: 900;
-//   line-height: 1;
-//   margin: 2rem 0;
-//   padding: 0;
-// }
-
 .summary__text {
   font-family: Mikro;
   font-size: 64px;
@@ -63,25 +49,54 @@
   margin: 1.5rem 0;
   padding: 0;
 }
-
 .summary__text--keyboard {
   font-weight: 500;
 }
 
-// .summary__text--link {
-//   font-weight: 500;
-// }
 
 .progress-chart {
   font-family: Ivar Soft;
   margin-top: 1rem;
 }
-
 .progress-footer {
   display: flex;
   justify-content: space-between;
   margin: 3rem 0;
 }
+
+
+.articles-title {
+  font-family: Mikro;
+  font-weight: 600;
+  font-size: 54px;
+  text-align: center;
+  text-decoration: underline;
+}
+.article {
+  margin: 3rem 0;
+  height: 10rem;
+}
+.article__title {
+  font-family: Ivar Display;
+  font-weight: 700;
+  font-size: 34px;
+  margin: 1rem 0;
+  text-align: center;
+}
+.article__description {
+  font-family: Ivar Soft;
+  font-size: 18px;
+  // text-align: center;
+}
+
+
+
+
+
+
+
+
+
 
 .summary-section {
   // width: 70%;
