--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -41,7 +41,7 @@ title: The Linear Isomorphic Keybaord
     <div class="col-12 progress-footer">
       <div class="">Last practice session: <a href="/practice-sessions/<%= data.practice_sessions.last.id %>"><%= data.practice_sessions.last.date %></a></div>
       <div>
-        <a href="/progress" class="">more progress here</a>
+        <a href="/progress" class="">more progress</a>
       </div>
     </div>
   </div>
@@ -57,144 +57,96 @@ title: The Linear Isomorphic Keybaord
       <h3 class="articles-title">Reflections</h3>
       <div class="articles">
         <div class="article">
-          <h4 class="article__title">The Idea</h4>
-          <div class="row justify-content-center">
-            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.</div>
-          </div>
+          <a href="#">
+            <h4 class="article__title">Reflection #3: 33 Hours</h4>
+            <div class="row justify-content-center">
+              <div class="col-10 article__description">
+                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+              </div>
+            </div>
+          </a>
         </div>
         <div class="article">
-          <h4 class="article__title">The Idea</h4>
-          <div class="row justify-content-center">
-            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
-          </div>
+          <a href="#">
+            <h4 class="article__title">Reflection #2: 15 Hours</h4>
+            <div class="row justify-content-center">
+              <div class="col-10 article__description">
+                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+              </div>
+            </div>
+          </a>
         </div>
         <div class="article">
-          <h4 class="article__title">The Idea</h4>
-          <div class="row justify-content-center">
-            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
-          </div>
+          <a href="/reflections/the-initial-assessment/">
+            <h4 class="article__title">Reflection #1: The Assessment</h4>
+            <div class="row justify-content-center">
+              <div class="col-10 article__description">
+                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+              </div>
+            </div>
+          </a>
         </div>
+      </div>
+      <div style="text-align: center;">
+        <a href="/articles" class="">more reflections</a>
       </div>
     </div>
     <div class="col-6">
       <h3 class="articles-title">Articles</h3>
       <div class="articles"> 
         <div class="article">
-          <h4 class="article__title">The Idea</h4>
-          <div class="row justify-content-center">
-            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
-          </div>
+          <a href="/articles/the-idea">
+            <h4 class="article__title">The Idea</h4>
+            <div class="row justify-content-center">
+              <div class="col-10 article__description">
+                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+              </div>
+            </div>
+          </a>
         </div>
         <div class="article">
-          <h4 class="article__title">The Idea</h4>
-          <div class="row justify-content-center">
-            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
-          </div>
+          <a href="/articles/the-hypotheses">
+            <h4 class="article__title">The Hypotheses</h4>
+            <div class="row justify-content-center">
+              <div class="col-10 article__description">
+                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+              </div>
+            </div>
+          </a>
         </div>
         <div class="article">
-          <h4 class="article__title">The Idea</h4>
-          <div class="row justify-content-center">
-            <div class="col-10 article__description">&nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major.</div>
-          </div>
+          <a href="/articles/the-experiment">
+            <h4 class="article__title">The Experiment</h4>
+            <div class="row justify-content-center">
+              <div class="col-10 article__description">
+                &nbsp;&nbsp;&nbsp;&nbsp;There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key.
+              </div>
+            </div>
+          </a>
         </div>
+      </div>
+      <div style="text-align: center;">
+        <a href="/articles" class="">more articles</a>
       </div>
     </div>
   </div>
 </div>
 
-
 <div class="container section">
+  <div class="row" style="margin-top: 2rem;">
+    <h2 class="col-12 section__header">Contact</h2>
+  </div>
+
   <div class="row">
-    <div class="col col-md-8">
-      <div>
-        <h2>Two keyboards</h2>
-      </div>
-      <div>
-        <img src="/images/mini-lik.svg" class="summary__keyboard" />
-        <img src="/images/mini-tk.svg" class="summary__keyboard" />
-      </div>
-    </div>
-  </div>
-  <div class="row justify-content-end summary-section">
-    <div class="col col-md-8">
-      <div>
-        <h2>Recorded practicing the same content  for the same amount of time</h2>
-      </div>
-      <div class="summary-icons" style="margin-top: 0">
-        <img src="/images/microphone.svg" class="summary__icon" />
-        <img src="/images/sheet-music.svg" class="summary__icon" />
-        <img src="/images/stopwatch.svg" class="summary__icon"/>
-      </div>
-    </div>
-  </div>
-  <div class="row summary-section">
-    <div class="col col-md-8">
-      <div>
-        <h2>Results are graphed, analyzed, and reflected upon.</h2>
-      </div>
-      <div class="summary-icons"> 
-        <img src="/images/bar-chart.svg" class="summary__icon"/>
-        <img src="/images/contract.svg" class="summary__icon"/>
+    <div class="col-12">
+      <div class="contact-text">
+        Have any questions, comments, propositions, qualms, exclaimations?
+        <br>
+        I'm happy to talk, You can reach me at <a href="mailto:linearisomorphickeyboard@gmail.com">linearisomorphickeyboard@gmail.com</a>
       </div>
     </div>
   </div>
 </div>
-
-<section class="container">
-  <hr class="hr-top"/><hr class="hr-bottom"/>
-</section>
-
-<div class="container section">
-  <div>
-    <h1>Articles</h1>
-  </div>
-  <div class="row justify-content-end">
-    <div class="col">
-      <ul>
-        <li class="article">
-          <div><h3><a href="/articles/the-idea">The Idea</a></h3></div>
-          <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major. It is wonderfully simple: just play the white notes. But...</div>
-        </li>
-        <li class="article">
-          <div><h3><a href="/articles/the-hypotheses">The Hypotheses</a></h3></div>
-          <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the traditional keyboard (TK). I predict that I will improve faster on the LIK than on the traditional keyboard and that the LIK will not have significant technical limitations...</div>
-        </li>
-        <li class="article">
-          <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
-          <div class="article-content">I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the traditional keyboard (TK)... </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="section__footer">
-    <a href="/articles">More Articles...</a>
-  </div>
-</div>
-
-<section class="container">
-  <hr class="hr-top"/><hr class="hr-bottom"/>
-</section>
-
-<div class="container section">
-  <div><h1>Progress</h1></div>
-
-  <div class="row justify-content-center progress">
-    <div class="col col-sm-8">
-      <div class="ct-chart chart--medium"></div>
-    </div>
-  </div>
-
-  <div class="section__footer">
-    <a href="/progress">More Progress Coming Soon</a>
-  </div>
-</div>
-
-<footer class="footer">
-  <div>
-    <h4 class="footer__contact">Contact: linearisomorphickeyboard@gmail.com</h4>
-  </div>
-  <div class="footer__credits">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-</footer>
 
 <script src="/javascripts/blocks/chartist-options.js"></script>
 <script>var data = <%= all_progress.to_json %></script>
