--- a/source/stylesheets/blocks/footer.css.scss
+++ b/source/stylesheets/blocks/footer.css.scss
@@ -1,20 +1,37 @@
-.footer {
-  width: 100%;
-  height: 10rem;
-  background-color: #848484;
+// .footer {
+//   width: 100%;
+//   height: 10rem;
+//   background-color: #848484;
+//   position: relative;
+//   display: flex;
+//   justify-content: space-around;
+//   align-items: center;
+//   flex-direction: column;
+// }
+// .footer__contact {
+//   margin: 0 3rem;
+//   color: #fff;
+//   @media screen and (max-width: 640px) {
+//     font-size: 12px;
+//   }
+// }
+// .footer__credits {
+//   font-size: 10px;
+// }
+
+footer {
+  height: 16rem;
   position: relative;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
 }
-.footer__contact {
-  margin: 0 3rem;
-  color: #fff;
-  @media screen and (max-width: 640px) {
-    font-size: 12px;
-  }
+
+footer > div {
+  position: absolute;
+  left: 165px;
+  bottom: 1rem;
 }
-.footer__credits {
-  font-size: 10px;
+
+.footer-logo {
+  display: inline-block;
+  margin-right: 1rem;
+  width: 6rem;
 }
