--- a/source/stylesheets/custom/index.css.scss
+++ b/source/stylesheets/custom/index.css.scss
@@ -76,12 +76,16 @@
   margin: 3rem 0;
   height: 10rem;
 }
+.article a {
+  text-decoration: none;
+}
 .article__title {
   font-family: Ivar Display;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 34px;
   margin: 1rem 0;
   text-align: center;
+  // text-decoration: underline;
 }
 .article__description {
   font-family: Ivar Soft;
@@ -89,100 +93,12 @@
   // text-align: center;
 }
 
-
-
-
-
-
-
-
-
-
-.summary-section {
-  // width: 70%;
-  margin-top: 5rem;
-  // @media screen and (max-width: 640px) {
-  //   width: 100%;
-  //   text-align: center;
-  // }
+.contact-text {
+  margin-top: 2rem;
+  font-family: Ivar Soft;
+  font-size: 21px;
+  line-height: 2;
 }
-.summary-section--right {
-  display: flex;
-  margin-left: auto;
-  @media screen and (max-width: 640px) {
-    margin-left: none;
-    text-align: center;
-  }
-}
-.summary-icons {
-  margin: 1rem 0;
-  display: flex;
-  justify-content: space-around;
-  // width: 70%;
-  // @media screen and (max-width: 640px) {
-  //   width: 100%;
-  //   justify-content: space-evenly;
-  // }
-}
-.summary-icons--right {
-  display: flex;
-  // margin-left: auto;
-  // @media screen and (max-width: 640px) {
-  //   margin-left: none;
-  // }
-}
-
-
-.summary__keyboard {
-  // width: 70%;
-  margin: 2rem 0;
-  // @media screen and (max-width: 640px) {
-  //   width: 100%;
-  //   margin: 1rem 0;
-  // }
-}
-.summary__icon {
-  height: 9rem; 
-  margin: 3rem;
-  @media screen and (max-width: 1020px) {
-    height: 7rem; 
-    margin: 3rem 1rem;
-  }
-  @media screen and (max-width: 640px) {
-    height: 5rem;
-  }
-}
-
-.article {
-  margin: 1.5rem 0;
-}
-
-.article-content {
-  font-size: 16px;
-}
-
-.section__footer {
-  text-align: right;
-  margin-top: 3rem;
-}
-
-.footer {
-  width: 100%;
-  height: 10rem;
-  background-color: #848484;
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
-}
-.footer__contact {
-  margin: 0 3rem;
-  color: #fff;
-  @media screen and (max-width: 640px) {
-    font-size: 12px;
-  }
-}
-.footer__credits {
-  font-size: 10px;
+.email-link {
+  
 }
