Style article index page.

--- a/source/stylesheets/custom/index.css.scss
+++ b/source/stylesheets/custom/index.css.scss
@@ -31,6 +31,10 @@
   margin-top: 8rem;
 }
 
+.section--top {
+  margin-top: 12rem;
+}
+
 .section__header {
   font-family: Mikro;
   // font-size: 100px;
