--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -17,5 +17,6 @@
 
 // Custom
 @import "custom/article.css.scss";
+@import "custom/articles-index.css.scss";
 @import "custom/index.css.scss";
 @import "custom/the-hypotheses.css.scss";
