--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,7 +21,7 @@
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
   </head>
-  <body>
+  <body class="<%= page_classes %>">
     <%= partial "partials/header" %>
     <%= yield %>
     <%= partial "partials/footer" %>
