--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -20,3 +20,4 @@
 @import "custom/articles-index.css.scss";
 @import "custom/index.css.scss";
 @import "custom/the-hypotheses.css.scss";
+@import "custom/practice-sessions-index.css.scss";
