Redesign practice session index

--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -1,8 +1,9 @@
 <footer class="container">
   <div>
-    <div class="footer-logo">
-      <a href="/"><%= svg "LIK-logo" %></a>
-    </div>by <a href="markjanzer.io">Mark Janzer</a>
+<!--     <div class="footer-logo">
+    <%# svg "LIK-logo" %></div> -->
+
+    The <span style="font-weight: 400;">Linear Isomorphic Keyboard</span> by <a href="markjanzer.io">Mark Janzer</a>
   </div>
   <div class="footer-date"></div>
 </footer>
