--- a/source/stylesheets/blocks/footer.css.scss
+++ b/source/stylesheets/blocks/footer.css.scss
@@ -26,6 +26,9 @@ footer {
   justify-content: space-between;
   align-items: flex-end;
   padding: 2rem 0;
+  font-family: Mikro;
+  font-weight: 100;
+  font-size: 1rem;
 }
 
 .footer-logo {
