Create outline for practice session show page.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -21,3 +21,4 @@
 @import "custom/index.css.scss";
 @import "custom/the-hypotheses.css.scss";
 @import "custom/practice-sessions-index.css.scss";
+@import "custom/practice-session-show.css.scss";
