--- a/source/stylesheets/custom/index.css.scss
+++ b/source/stylesheets/custom/index.css.scss
@@ -14,7 +14,7 @@
   line-height: 1.3;
 }
 .hero__text--black {
-  font-weight: 900;
+  font-weight: 700;
 }
 .hero__image {
   margin: 0 auto;
@@ -36,16 +36,16 @@
 }
 
 .section__header {
-  font-family: Mikro;
+  font-family: Graphit;
   // font-size: 100px;
   font-size: 90px;
-  font-weight: 900;
+  font-weight: 700  ;
   line-height: 1;
   margin: 2rem 0;
   padding: 0;
 }
 .summary__text {
-  font-family: Mikro;
+  font-family: Graphit;
   font-size: 64px;
   // font-size: 45px;
   font-weight: 100;
@@ -70,7 +70,7 @@
 
 
 .articles-title {
-  font-family: Mikro;
+  font-family: Graphit;
   font-weight: 600;
   font-size: 54px;
   text-align: center;
