Change article title styles.

--- a/source/stylesheets/custom/index.css.scss
+++ b/source/stylesheets/custom/index.css.scss
@@ -84,8 +84,8 @@
   text-decoration: none;
 }
 .article__title {
-  font-family: Ivar Display;
-  font-weight: 600;
+  font-family: Graphit;
+  font-weight: 400;
   font-size: 34px;
   margin: 1rem 0;
   text-align: center;
