Change exercise_practice_sessions to be exercises_practice_sessions uniformly. Fix sass compilation errors.

--- a/source/stylesheets/blocks/_chartist.css.scss
+++ b/source/stylesheets/blocks/_chartist.css.scss
@@ -1,4 +1,4 @@
-@import "chartist-settings.css.scss";
+// @import "chartist-settings.css.scss";
 
 @mixin ct-responsive-svg-container($width: 100%, $ratio: $ct-container-ratio) {
   display: block;
