--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -8,6 +8,7 @@
 @import "general.css.scss";
 
 // Blocks
+@import "blocks/chartist-settings.css.scss";
 @import "blocks/chartist.css.scss";
 @import "blocks/chart.css.scss";
 @import "blocks/footer.css.scss";
