Rename css files.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -12,7 +12,7 @@
 @import "blocks/chartist.css.scss";
 @import "blocks/chart.css.scss";
 @import "blocks/footer.css.scss";
-@import "blocks/grid.css";
+@import "blocks/grid.css.scss";
 @import "blocks/navbar.css.scss";
 @import "blocks/truncate.css.scss";
 
