--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -23,3 +23,4 @@
 @import "custom/the-hypotheses.css.scss";
 @import "custom/practice-sessions-index.css.scss";
 @import "custom/practice-session-show.css.scss";
+@import "custom/progress.css.scss";
