--- a/source/stylesheets/custom/_progress.css.scss
+++ b/source/stylesheets/custom/_progress.css.scss
@@ -1,3 +1,24 @@
 .progress_index {
-  
+  .progress__description {
+    font-family: Ivar Soft;
+    font-size: 21px;
+    margin: 1rem 0;
+  }
+
+  .chart-section__header {
+    font-size: 54px;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .chart--medium {
+    font-family: Graphit;
+  }
+
+  .exercise-header {
+    display: block;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 500;
+  }
 }
