Add new text for Other Isomorphic Keyboards, edit article show styles.

--- a/source/stylesheets/custom/_article.css.scss
+++ b/source/stylesheets/custom/_article.css.scss
@@ -20,3 +20,43 @@
   text-decoration: underline;
 }
 
+.article-show {
+  font-family: Ivar Text;
+  font-size: 21px;
+  font-weight: 300;
+
+  h1, h2, h3, h4, h5, h6 {
+    font-family: Graphit;
+    font-weight: 500;
+  }
+  h1 {
+    font-size: 64px;
+    font-weight: 700;
+  }
+  h2 {
+    font-size: 42px;
+  }
+  h3 {
+    font-size: 36px;
+  }
+  h4 {
+    font-size: 28px;
+  }
+  h5 {
+    font-size: 24px;
+  }
+
+  ol:last-of-type {
+    margin-top: 8rem;
+    font-size: 16px;
+  }
+
+  img {
+    margin: 4rem 0;
+  }
+
+  p {
+    margin: 2rem 0;
+  }
+}
+
